--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Learn with Munedra",
   "short_name": "LWM",
-  "description": "Your personalized learning platform for competitive exams and academic success.",
+  "description": "Your personalized learning platform by Munedra.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f172a",
+  "background_color": "#111827",
   "theme_color": "#facc15",
   "icons": [
     {
