--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "Learn with Munedra",
   "short_name": "LWM",
-  "description": "Your personalized learning platform by Munedra.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#facc15",
+  "description": "Your personalized learning platform",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/A_digital_vector_icon_features_a_square-shaped_bad.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/A_digital_vector_icon_features_a_square-shaped_bad.png",
       "sizes": "512x512",
       "type": "image/png"
     }
