--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,19 +3,18 @@
   "short_name": "LWM",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#111827",
+  "background_color": "#000000",
   "theme_color": "#facc15",
-  "description": "Your personalized learning platform",
   "icons": [
     {
-      "src": "/A_digital_vector_icon_features_a_square-shaped_bad.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "icons/A_vector-based_digital_logo_design_features_a_squa.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
-      "src": "/A_digital_vector_icon_features_a_square-shaped_bad.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "icons/A_digital_vector_icon_features_a_square-shaped_bad.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ]
 }
