--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,22 @@
+
 {
   "name": "Learn with Munedra",
   "short_name": "LWM",
+  "description": "Your personalized learning platform",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#111827",
   "theme_color": "#facc15",
   "icons": [
     {
-      "src": "icons/A_vector-based_digital_logo_design_features_a_squa.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "/icons/A_vector-based_digital_logo_design_features_a_squa.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "icons/A_digital_vector_icon_features_a_square-shaped_bad.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/icons/A_digital_vector_icon_features_a_square-shaped_bad.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
