--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,19 @@
-
 {
   "name": "Learn with Munedra",
-  "short_name": "LWM",
+  "short_name": "Learn with Munedra",
   "description": "Your personalized learning platform",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#111827",
+  "background_color": "#222",
   "theme_color": "#facc15",
   "icons": [
     {
-      "src": "/icons/A_vector-based_digital_logo_design_features_a_squa.png",
+      "src": "/icons/logo-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/A_digital_vector_icon_features_a_square-shaped_bad.png",
+      "src": "/icons/logo-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
