--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Learn with Munedra",
-  "short_name": "Learn with Munedra",
+  "short_name": "LWM",
   "description": "Your personalized learning platform",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#222",
+  "background_color": "#0f172a",
   "theme_color": "#facc15",
   "icons": [
     {
